syntax = "proto3";

import "google/protobuf/struct.proto";

message Config {
    repeated Route routes = 1;
    repeated Upstream upstreams = 2;
    repeated VirtualHost virtual_hosts = 3;
}

message Route {
    Matcher matcher = 1;
    oneof destination {
        FunctionDestination function_name = 2;
        UpstreamDestination upstream_destination = 3;
    }
    map<string, google.protobuf.Struct> plugins = 4;
}

message Matcher {
    oneof path {
        string prefix = 1;
        string regex = 2;
        string exact = 3;
    }
    map<string, string> headers = 4;
    repeated string verbs = 5;
    string virtual_host = 6;
}

message FunctionDestination {
    string upstream_name = 1;
    string function_name = 2;
}

message UpstreamDestination {
    string upstream_name = 1;
    string rewrite_prefix = 2;
}

message Upstream {
    string name = 1;
    string type = 2;
    google.protobuf.Struct spec = 3;
    repeated Function functions = 4;
}

message Function {
    string name = 1;
    google.protobuf.Struct spec = 3;
}

message VirtualHost {
    repeated string domains = 1;
    SSLConfig ssl_config = 2;
}

message SSLConfig {
    string ca_cert_path = 1;
}